package entite;

public class Guerrier extends Classe
{

}
