package entite;

public class Halfelin extends Race
{

}
