package entite;

public class Nain extends Race
{

}
